crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-dataset-hybrid_multiple_column_megascience_vector_search_sql_projection.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(score, 3) as score FROM vector_search(qs, 'second', answer) order by score desc, id LIMIT 4"
---
"HTTP error: 400 Bad Request - Failed to execute query: Error during planning: User function 'vector_search' is called on table 'spice.public.qs' that does not have a embedding index on 'answer' column. Index is on column(s): question"
