crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-dataset-hybrid_multiple_column_megascience_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by score desc LIMIT 4"
---
Could not prepare EXPLAIN plan. SQL error: "HTTP error: 400 Bad Request - Failed to execute query: Error during planning: User function 'vector_search' is called on table 'spice.public.qs' that does not have a embedding index on 'answer' column. Index is on column(s): question"
