crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-dataset-multi_column_megascience_basic_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "qs",
      "matches": {
        "answer": "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
      },
      "primary_key": {
        "id": 948
      },
      "score": 0.01
    },
    {
      "dataset": "qs",
      "matches": {
        "question": "How many groups of 3 are in 18?"
      },
      "primary_key": {
        "id": 463
      },
      "score": 0.01
    },
    {
      "dataset": "qs",
      "matches": {
        "question": "How many groups of 5 are in 25?"
      },
      "primary_key": {
        "id": 464
      },
      "score": 0.01
    },
    {
      "dataset": "qs",
      "matches": {
        "answer": "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]"
      },
      "primary_key": {
        "id": 189
      },
      "score": 0.01
    }
  ]
}
