crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-dataset-multi_column_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.03,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The even multiples of 5 between 0 and 60 are the multiples of 10: 10, 20, 30, 40, and 50. There are $\\boxed{5}$ such numbers."
        ],
        "question": [
          "How many numbers between 0 and 60 are even multiples of 5?"
        ]
      },
      "primary_key": {
        "id": 470
      }
    },
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    },
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "There are 22 female students and 18 male students in a classroom. Find the total number \\( t \\) of students."
        ]
      },
      "primary_key": {
        "id": 787
      }
    }
  ]
}
